2002-02-20  Akira TAGOH  <tagoh@redhat.com>

	* app/render_gnomeprint.c (get_width_string): add new function.
	(draw_string): fix non-multibyte specific code.

2002-02-19  Cyrille Chepelov  <cyrille@chepelov.org>

	Patch contributed by Matthieu Sozeau <mattam@netcourrier.com>:
	
	* lib/font.c: do not try to search paths that do not begin with
	'/', like X Font Server addresses.
        
	* objects/UML/message.c (message_draw): free mname when not 
	message->text but CREATE or DESTROY.
        
	* objects/UML/uml.h:
	* objects/UML/uml.c:
	* objects/UML/class_dialog.c: added code to handle a stereotype 
	attribute for operations.

2002-02-19  Akira TAGOH  <tagoh@redhat.com>

	* lib/Makefile.am: add LIBART_CFLAGS.

2002-02-15  Hans Breuer  <hans@breuer.org>

	* lib/font.c (font_get_suck_font): the black and white pixel values 
	need to be taken from a 1 bit colormap rather than the default colormap.
	(fixed again, last time was 2000-05-26)

	Also handle the case where GTK_TALKS_UTF8 and expects all strings
	passed in to be in this encoding.

	* lib/libdia.def : export suck_font_free()

	* lib/text.c (text_draw) : avoid circular dependency to ../app
	at least for the !USE_XIM case, where it is unnecessary.

2002-02-15  Cyrille Chepelov  <cyrille@chepelov.org>

	Changes contributed by Matts Kivik <kivik@firstlinux.net>:
	
	* shapes/Circuit/microphone_de.(shape|xpm) (NEW):
	* sheets/Circuit.sheet.in: added new shape microphone
	* shapes/Circuit/speaker_de.shape: Added a connection point.
	
2002-02-13  Akira TAGOH  <tagoh@redhat.com>

	* app/render_libart.c (draw_string): fixed build issue for Win32.

	* lib/font.c (font_get_suckfont): fixed typo. it could't build under
	Win32.

	* configure.in: fixed testing gtk_advancement.

	* app/render_gnomeprint.c (draw_string): uses utfchar instead of char.

2002-02-12  Akira TAGOH  <tagoh@redhat.com>

	* lib/text.c (text_draw): fixed XIM position, when menubar is shown for
	diagram window.
